# Python_basic

./: .gitignore  README.md  bd.py  main.py  pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml
homework_03/views/: router.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  index.html
homework_06/: jsonplaceholder_requests.py  main.py  models.py
homework_07/: Makefile  main.py
homework_07/first_project/first_project/: settings.py  urls.py
homework_07/first_project/news/: admin.py  forms.py  models.py  urls.py  views.py
homework_07/first_project/news/migrations/: 0004_category_remove_product_company_news_delete_company_and_more.py
homework_07/first_project/news/templates/: base.html  home.html
homework_07/first_project/news/templates/news/: news_confirm_delete.html  news_detail.html  news_form.html  news_list.html  news_update.html
homework_07/first_project/products/: forms.py  models.py  urls.py  views.py
homework_07/first_project/products/migrations/: 0001_initial.py  0002_seller_product_delete_choice_delete_question.py  0003_company_alter_product_company_delete_seller.py
homework_07/first_project/products/templates/: base.html  index.html
homework_07/first_project/userss/: forms.py  models.py  signals.py  urls.py  views.py
testing/test_homework_03/: test_app.py
user_access/: userr.py
views/: __init__.py  router.py
(+3 files in other folders)
