[tool.poetry]
name = "python-basic"
version = "0.1.0"
description = ""
authors = ["Dmitry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
sqlalchemy = "^2.0.23"
aiohttp = "^3.9.1"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
